# rendering

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
benches/: tree_construction.rs
src/: html5.rs  lib.rs  testing.rs  types.rs
src/html5/: html5ever.rs  lol_html.rs  quick_xml.rs  tl.rs  tokenizer.rs
src/html5/tokenizer/: builder.rs  state.rs
src/testing/: tokenizer.rs  tree_construction.rs
src/testing/tree_construction/: html5ever.rs  lol_html.rs  parser.rs  quick_xml.rs  tl.rs
tests/: tokenizer.rs  tree_construction.rs
