[package]
name = "rendering"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"
resolver = "2"

[features]
parser = ["tl", "lol_html"]

[[bin]]
name = "parse"
path = "src/bin/parse.rs"

[[test]]
name = "tree_construction"
path = "tests/tree_construction.rs"

[dependencies]
encoding_rs = "0.8.33"
itertools = "0.11.0"
lol_html = { version = "2.1.0", optional = true }
nom = "7.1.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tl = { version = "0.7.8", features = ["simd"], optional = true }

[dev-dependencies]
test-case = "3.2.1"
rendering = { path = ".", features = ["tl", "lol_html"] }
